# emily-prime

./: README.md  constants.py  contacts.py  index_messages.py  main.py  openapi_letta.json  openapi_openai.json  pyproject.toml  synthesize_archival_memories.py  whatsapp_db.py
docs/: whatsapp-export.md
graphrag/: .gitignore  README.md  populate_input_files.py
graphrag/prompts/: community_report.txt  entity_extraction.txt  summarize_descriptions.txt
