[project]
name = "emilyprime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "haystack-ai>=2.8.0",
    "pgvector-haystack>=1.2.0",
    "sentence-transformers>=3.0.0",
]

[tool.uv]
dev-dependencies = [
    "ipython>=8.31.0",
]
